feat: monsters part 2 (#117)
